[package]
name = "wire-rs"
version = "0.2.1"
authors = ["Nathaniel Bennett <me@nathanielbennett.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
repository = "https://github.com/nathaniel-bennett/wire-rs"
description = "Extensible interface for converting data to/from wire protocol. Supports non-contiguous buffers (including &[IoSlice]) and is no_std compatible."
keywords = ["encode", "iovec", "no_std", "serialization"]
categories = ["encoding", "no-std", "rust-patterns"]

[features]
default = ["std"]
std = []
ioslice = ["std"]

[dependencies]
